feat: Centralize config and update Redis Stack
- Centralize environment variables into src/config.js
- Refactor all modules to use config object instead of process.env
- Update Redis service to use redis/redis-stack:latest with Insights port 8001
- Fix dependency version mismatch by pinning connectrpc and protobuf versions
- Update .env.example with REDIS_INSIGHTS_PORT

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 PORT=3000
 REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_INSIGHTS_PORT=8001
 SERVICE_ADDR_USER=http://user-service:3001
 SERVICE_ADDR_PAYMENT=http://payment-service:3002
 JWT_SECRET=supersecretkey
