--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
-    "@connectrpc/connect": "^1.3.0",
-    "@connectrpc/connect-node": "^1.3.0",
-    "@bufbuild/protobuf": "^1.7.0"
+    "@connectrpc/connect": "1.6.0",
+    "@connectrpc/connect-node": "1.6.0",
+    "@bufbuild/protobuf": "1.10.0"
   },
   "devDependencies": {
     "bun-types": "latest"
