--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "bun run --watch src/index.js"
   },
   "dependencies": {
-    "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.2",
+    "@bufbuild/protobuf": "1.10.0",
     "@connectrpc/connect": "1.6.0",
     "@connectrpc/connect-node": "1.6.0",
-    "@bufbuild/protobuf": "1.10.0"
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "bun-types": "latest"
