--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     deploy:
       replicas: 1 # Number of replicas for the gateway service
     env_file:
-      - .env
+      - env/.env
     networks:
       - app-network
     depends_on:
