--- a/env/.env.example
+++ b/env/.env.example
@@ -1,9 +1,9 @@
 PORT=3000
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_INSIGHTS_PORT=8001
-SERVICE_ADDR_USER=http://localhost:3001
-SERVICE_ADDR_PAYMENT=http://localhost:3002
+SERVICE_ADDR_USER=http://user-service:3001
+SERVICE_ADDR_PAYMENT=http://payment-service:3002
 JWT_SECRET=supersecretkey
 RATE_LIMIT_WINDOW=60
 RATE_LIMIT_MAX=100
