--- a/infra/fluent-bit/fluent-bit.conf
+++ b/infra/fluent-bit/fluent-bit.conf
@@ -2,6 +2,7 @@
     Flush        1
     Log_Level    info
     Daemon       off
+    Parsers_File  parsers.conf
 
 [INPUT]
     Name              tail
