chore: dockerize fluent-bit and update infrastructure
- Created infra/fluent-bit/Dockerfile to encapsulate logging service
- Updated docker-compose.yml to build fluent-bit from local context
- Cleaned up volume mounts by internalizing configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,10 +35,10 @@ services:
       - app-network
 
   fluent-bit:
-    image: fluent/fluent-bit:latest
+    build:
+      context: ./infra/fluent-bit
     container_name: gateway-fluent-bit
     volumes:
-      - ./infra/fluent-bit/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
       - app-logs:/var/log/app
     depends_on:
       - gateway
